--- a/index.html
+++ b/index.html
@@ -1,23 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-	<title>Temperature</title>
-	<link rel ="stylesheet" href="style.css">
-	<meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <title>CodePen - Random Song (Genius API)</title>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-	<div class = "container">
-		<br><br><br><br>
-		<form id = "form">
-		  <label for="choice">Show me the weather in </label>
-		  <input type="text" id="choice" name="choice">
-		</form>
+<!-- partial:index.partial.html -->
+<head>
+<link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet">
+</head>
+<body> 
+<div class="container-fluid" >
+  <div class="row text-center">
+    <h2 >HOW DOES MUSIC MAKE YOU FEEL?</h2>  
+  </div>
+  <div class="row text-center">
+    <!-- <h3>RANDOM SONG GENERATOR</h3><br> -->
+ 
+	<br><br><br>
+	<form id = "form">
+	  <label for="choice">ENTER AN EMOTION: </label>
+	  <input type="text" id="choice" name="choice">
 
-		<button>Submit</button><br><br>
+	  <button>Submit</button><br><br>
 
-		<div id = "result"></div>
-	</div>
+	  <br><br>
+	</form>
 
-	<script src="script.js"></script>
+
+	<div id = "result"></div>
+</div>
+
+  <div class="row text-center">
+    <div class="col-xs-6 text-right" id="songImage"></div>
+    <div class="col-xs-6 text-left">
+      <p id="song"></p>
+      <p id="artist"></p>
+      <p id="releaseDate"></p>
+      <!-- <button class="button" onclick="newRandomSong()"><span>NEW SONG</span></button> -->
+      <br>
+       <!-- <button class="button tweet" onclick="tweetSong()"><span>TWEET SONG <i class="fa fa-twitter"></i></span></button> -->
+      
+
+    </div>
+  </div>
+  <!--<div class="row text-center">
+    <button class="button" onclick="newRandomSong()"><span>NEW SONG</span></button>
+  </div>-->
+</div>
+</body> 
+
+<!-- Colours 
+RGB: 41, 41, 41
+RGB: 255, 255, 100
+RGB: 153, 167, 238
+RGB: 255, 20, 100
+-->
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script><script  src="./script.js"></script>
+
 </body>
 </html>
