--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
 </head>
 <body> 
 <div class="container-fluid" >
-  <div class="row text-center">
+        <div class="row text-center">
     <h2 >HOW DOES MUSIC MAKE YOU FEEL?</h2>  
-  </div>
-  <div class="row text-center">
-    <!-- <h3>RANDOM SONG GENERATOR</h3><br> -->
+    <br>
+        </div>
+        <div class="row text-center">
+               <!-- <h3>RANDOM SONG GENERATOR</h3><br> -->
  
-	<br><br><br>
-	<form id = "form">
-	  <label for="choice">ENTER AN EMOTION: </label>
+	    <br><br><br>
+	    <form id = "form">
+        <div class="emotion">
+	    <label for="choice">ENTER AN EMOTION: </label>
+        </div>
 
-
-	  <input type="text" id="choice" name="choice">
-    <button class="submit" onclick="randomSong()">Check</button>
+	    <input type="text" id="choice" name="choice">
+      <button class="submit" onclick="randomSong()">SUBMIT</button>
 
 
 	  <!-- <button class="submit">Submit</button><br><br> -->
 
-	  <br><br>
+	  <br><br><br> <br><br><br>
 	</form>
 
 
