--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <h2 >HOW DOES MUSIC MAKE YOU FEEL?</h2>  
     <br>
         </div>
+
+        <div class="emotionlist">
+          <br>
+          <h1>Use any emotion from this list:</h1>
+          <p>angry, mad, happy, sad
+
+          </p>
+        </div>
+
         <div class="row text-center">
                <!-- <h3>RANDOM SONG GENERATOR</h3><br> -->
  
@@ -39,8 +48,8 @@
 
 	<div id = "result">
           <!-- <button class="button" onclick="newRandomSong()"><span>Submit</span></button><br><br> -->
-  </div>
-</div>
+    </div>
+    </div>
 
   <div class="row text-center">
     <div class="col-xs-6 text-right" id="songImage"></div>
@@ -59,6 +68,8 @@
     <button class="button" onclick="newRandomSong()"><span>NEW SONG</span></button>
   </div>-->
 </div>
+
+
 </body> 
 
 <!-- Colours 
