added more emotion options

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body> 
 <div class="container-fluid" >
         <div class="row text-center">
-    <h2 >HOW DOES MUSIC MAKE YOU FEEL?</h2>  
+    <h2 >MUSIC MONITOR</h2>  
     <br>
         </div>
 
         <div class="emotionlist">
           <br>
-          <h1>Use any emotion from this list:</h1>
-          <p>angry, mad, happy, sad
+          <h1>Use any emotion or feeling from this list:</h1>
+          <p>angry, happy, sad, calm, excited, desperate, regretful, rebel, groovy, nostalgic, revenge
 
           </p>
         </div>
@@ -33,7 +33,7 @@
 	    <br><br><br>
 	    <form id = "form">
         <div class="emotion">
-	    <label for="choice">ENTER AN EMOTION: </label>
+	    <label for="choice">HOW ARE YOU TODAY? </label>
         </div>
 
 	    <input type="text" id="choice" name="choice">
