added a ton of songs to randomize from in arrays

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <div class="emotionlist">
           <br>
-          <h1>Use any emotion or feeling from this list:</h1>
-          <p>angry, happy, sad, calm, excited, desperate, regretful, rebel, groovy, nostalgic, revenge
+          <h1>Enter any emotion or feeling from this list:</h1>
+          <p>angry, happy, sad, calm, excited, desperate, regretful, rebel, groovy, nostalgic, revenge, ethereal, lovestruck
 
           </p>
         </div>
